finish some labs

--- a/lab4/templates/sorted.html
+++ b/lab4/templates/sorted.html
@@ -5,10 +5,10 @@
         <title>Sorted!</title>
     </head>
     <body>
+        <h3>Sorting Process</h3>
+        <h3>All Iterations of the bubble sort</h3>
         {% for iter in iterations %}
-            {% for swap in iter %}
-                <p>{{swap}}</p>
-            {% endfor %}
-        {% end for %}
+            <p>{{iter}}</p>
+        {% endfor %}
     </body>
 </html>
