--- a/lab5/templates/calculator.html
+++ b/lab5/templates/calculator.html
@@ -42,6 +42,9 @@
             <button type="submit" name="button" value="sqrt(">sqrt</button>
             <button type="submit" name="button" value="CE">CE</button><br>
 
+            <button type="submit" name="button" value="<"><</button>
+            <button type="submit" name="button" value=">">></button>
+
         </form>
     </body>
 </html>
